5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1644_1053.log
== TEST (2019-04-11 17:20:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

 patrono = str(input"Qual seu patrono")
	
if patrono == "cervo":
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono de Harry Potter")
-- ERROR:
File "XXXX", line 5
    patrono = str(input"Qual seu patrono")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:20:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

 patrono = (input"Qual seu patrono")
	
if patrono == "cervo":
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono de Harry Potter")
-- ERROR:
File "XXXX", line 5
    patrono = (input"Qual seu patrono")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:20:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

 patrono = input("Qual seu patrono")
	
if patrono == "cervo":
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono de Harry Potter")
-- ERROR:
File "XXXX", line 5
    patrono = input()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:23:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

 patrono = str(input("Qual seu patrono"))
	
if patrono == "cervo":
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono de Harry Potter")
-- ERROR:
File "XXXX", line 5
    patrono = str(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:23:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

 patrono = str(input("Qual seu patrono?"))
	
if patrono == "cervo":
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono de Harry Potter")
-- ERROR:
File "XXXX", line 5
    patrono = str(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:25:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

 patrono = str(input("Qual seu patrono?"))
	
if (patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(patrono, "nao eh patrono de Harry Potter")
-- ERROR:
File "XXXX", line 5
    patrono = str(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:25:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

 patrono = input("Qual seu patrono?")
	
if (patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(patrono, "nao eh patrono de Harry Potter")
-- ERROR:
File "XXXX", line 5
    patrono = input()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:25:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

 patrono = input("Qual seu patrono?")
	
if (patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(patrono, "nao eh patrono de Harry Potter")
-- ERROR:
File "XXXX", line 5
    patrono = input()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:25:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono?")
	
if (patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(patrono, "nao eh patrono de Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:26:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono?")
	
if (patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(patrono, "nao eh patrono de Harry Potter")
-- EXECUTION TIME:
0.15545
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:27:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono?")
	
if (patrono == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(patrono, "nao eh patrono de harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:28:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono?")
	
if (patrono == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(patrono, "nao eh patrono de harry potter")
-- EXECUTION TIME:
0.206989
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:31:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono?")
	
if (patrono == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(patrono, "nao eh patrono de harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:31:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono?")
	
if (patrono == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(patrono, "nao eh patrono de harry potter")
-- EXECUTION TIME:
0.292464
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:31:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono?")
	
if (patrono == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(patrono, "nao eh patrono de harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:35:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono?")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono, " nao eh patrono de Harry Potter"
	
print (mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:36:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono, " nao eh patrono de Harry Potter")
	
print (mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:37:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono, " nao eh patrono de Harry Potter")
	
print (mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:37:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono, " nao eh patrono de Harry Potter")
	
print (mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:38:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono#, " nao eh patrono de Harry Potter"
	
print (mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:38:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono, " nao eh patrono de Harry Potter"
	
print (mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:39:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono)#, " nao eh patrono de Harry Potter"
	
print (mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:40:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono, patrono)
	
print (mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:42:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono + "" nao eh patrono de Harry Potter")
	
print (mensagem.lower())
-- ERROR:
File "XXXX", line 10
    mensagem = (patrono + "" nao eh patrono de Harry Potter")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:42:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono + " nao eh patrono de Harry Potter")
	
print (mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 17:42:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono + " nao eh patrono de Harry Potter")
	
print (mensagem.lower())
-- EXECUTION TIME:
0.210936
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:43:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono + "nao eh patrono de Harry Potter")
	
print (mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 17:43:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono + "nao eh patrono de Harry Potter")
	
print (mensagem.lower())
-- EXECUTION TIME:
0.190651
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono de harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:43:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
	
print (mensagem.lower())
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 17:43:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
	
print (mensagem.lower())
-- EXECUTION TIME:
0.164887
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:09:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
	
print (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 18:09:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
	
print (mensagem)
-- EXECUTION TIME:
0.17206
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:10:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono + " nao eh patrono de Harry Potter")
	
print (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 18:10:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono + " nao eh patrono de Harry Potter")
	
print (mensagem)
-- EXECUTION TIME:
0.202068
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:11:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono, " nao eh patrono de Harry Potter")
	
print (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 18:11:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono, " nao eh patrono de Harry Potter")
	
print (mensagem)
-- EXECUTION TIME:
0.15989
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
('bode', ' nao eh patrono de Harry Potter')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:11:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono, ' nao eh patrono de Harry Potter')
	
print (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:12:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono, ' nao eh patrono de Harry Potter'
	
print (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:13:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + ' nao eh patrono de Harry Potter'
	
print (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 18:13:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + ' nao eh patrono de Harry Potter'
	
print (mensagem)
-- EXECUTION TIME:
0.199356
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:13:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + ' nao eh patrono do Harry Potter'
	
print (mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 18:14:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Qual seu patrono? ")
	
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + ' nao eh patrono do Harry Potter'
	
print (mensagem)
-- EXECUTION TIME:
0.139625
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
